# gol

./: .gitignore  CMakeLists.txt  readme.md
app/: CMakeLists.txt  main.cpp  qmlboard.cpp  qmlboard.h  resources.qrc
app/ui/: main.qml
benchmark/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: board.h  boundedboard.h  iboard.h  infiniteboard.h  infiniteboard2.h
lib/src/: board.cpp  boundedboard.cpp  infiniteboard.cpp  infiniteboard2.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
